handle upload files to blob storage

--- a/.env.sample
+++ b/.env.sample
@@ -21,3 +21,7 @@ AZURE_OPENAI_STOP_SEQUENCE=
 AZURE_OPENAI_SYSTEM_MESSAGE=You are an AI assistant that helps people find information.
 AZURE_OPENAI_PREVIEW_API_VERSION=2023-06-01-preview
 AZURE_OPENAI_STREAM=True
+AZURE_BLOB_STORAGE_CONNECTION_STRING=
+UPLOAD_FOLDER=uploads
+UPLOAD_MAX_FILE_SIZE=100000000
+UPLOAD_ALLOWED_FILE_TYPES=txt,pdf
