Sample environment file

--- a/.env.sample
+++ b/.env.sample
@@ -1,23 +1,31 @@
-AZURE_SEARCH_SERVICE=
-AZURE_SEARCH_INDEX=
-AZURE_SEARCH_KEY=
-AZURE_SEARCH_USE_SEMANTIC_SEARCH=False
-AZURE_SEARCH_SEMANTIC_SEARCH_CONFIG=default
-AZURE_SEARCH_INDEX_IS_PRECHUNKED=False
-AZURE_SEARCH_TOP_K=5
-AZURE_SEARCH_ENABLE_IN_DOMAIN=False
-AZURE_SEARCH_CONTENT_COLUMNS=
-AZURE_SEARCH_FILENAME_COLUMN=
-AZURE_SEARCH_TITLE_COLUMN=
-AZURE_SEARCH_URL_COLUMN=
-AZURE_OPENAI_RESOURCE=
-AZURE_OPENAI_MODEL=
-AZURE_OPENAI_KEY=
-AZURE_OPENAI_MODEL_NAME=gpt-35-turbo
-AZURE_OPENAI_TEMPERATURE=0
-AZURE_OPENAI_TOP_P=1.0
+AZURE_ENV_NAME="nyc-cogsearch-useast"
+AZURE_FORMRECOGNIZER_RESOURCE_GROUP="rg-nyc-cogsearch-useast"
+AZURE_FORMRECOGNIZER_SERVICE="cog-fr-p5nvosgo6yaw4"
+AZURE_FORMRECOGNIZER_SKU_NAME="S0"
+AZURE_LOCATION="eastus"
+AZURE_OPENAI_KEY="========================== GET FROM OUR DEPLOYMENT"
 AZURE_OPENAI_MAX_TOKENS=1000
-AZURE_OPENAI_STOP_SEQUENCE=
-AZURE_OPENAI_SYSTEM_MESSAGE=You are an AI assistant that helps people find information.
-AZURE_OPENAI_PREVIEW_API_VERSION=2023-06-01-preview
-AZURE_OPENAI_STREAM=True
+AZURE_OPENAI_MODEL="turbo"
+AZURE_OPENAI_MODEL_NAME="gpt-35-turbo"
+AZURE_OPENAI_PREVIEW_API_VERSION="2023-06-01-preview"
+AZURE_OPENAI_RESOURCE="cog-p5nvosgo6yaw4"
+AZURE_OPENAI_RESOURCE_GROUP="rg-nyc-cogsearch-useast"
+AZURE_OPENAI_SKU_NAME="S0"
+AZURE_OPENAI_STOP_SEQUENCE=""
+AZURE_OPENAI_STREAM="true"
+AZURE_OPENAI_SYSTEM_MESSAGE="You are an AI assistant that helps people find information."
+AZURE_OPENAI_TEMPERATURE=0
+AZURE_RESOURCE_GROUP="rg-nyc-cogsearch-useast"
+AZURE_SEARCH_CONTENT_COLUMNS="content"
+AZURE_SEARCH_ENABLE_IN_DOMAIN="true"
+AZURE_SEARCH_FILENAME_COLUMN="filepath"
+AZURE_SEARCH_INDEX="gptkbindex"
+AZURE_SEARCH_KEY="========================== GET FROM OUR DEPLOYMENT"
+AZURE_SEARCH_SEMANTIC_SEARCH_CONFIG="default"
+AZURE_SEARCH_SERVICE="gptkb-p5nvosgo6yaw4"
+AZURE_SEARCH_SERVICE_RESOURCE_GROUP="rg-nyc-cogsearch-useast"
+AZURE_SEARCH_SKU_NAME="standard"
+AZURE_SEARCH_TITLE_COLUMN="title"
+AZURE_SEARCH_TOP_K=5
+AZURE_SEARCH_URL_COLUMN="url"
+AZURE_SEARCH_USE_SEMANTIC_SEARCH="false"
