--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-markdown": "^7.0.1",
     "react-router-dom": "^6.8.1",
+    "react-uuid": "^2.0.0",
     "rehype-raw": "^6.1.1",
     "remark-gfm": "^3.0.1",
     "remark-supersub": "^1.0.0"
