--- a/.github/workflows/noauth_spedditi-gpt4-ca-sam.yml
+++ b/.github/workflows/noauth_spedditi-gpt4-ca-sam.yml
@@ -16,7 +16,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-
+      
+      - name: Install npm and build node app
+        run: cd ./frontend;npm install;npm run build; npm prune --production
+        
       - name: Set up Python version
         uses: actions/setup-python@v1
         with:
