--- a/.github/workflows/main_dnb-itera-chat.yml
+++ b/.github/workflows/main_dnb-itera-chat.yml
@@ -53,6 +53,10 @@ jobs:
         with:
           name: python-app
           path: .
+
+      - name: Azure Login
+        uses: Azure/login@v1
+            
           
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v2
