--- a/scripts/pipeline.yml
+++ b/scripts/pipeline.yml
@@ -2,10 +2,14 @@ $schema: https://azuremlschemas.azureedge.net/latest/pipelineJob.schema.json
 type: pipeline
 
 display_name: data_preparation_pipeline
+experiment_name: data_prep
 description: Pipeline to crack, chunk, and embed data for RAG.
 
 settings:
-  default_compute: azureml:sawidder1
+  default_compute: azureml:serverless
+
+identity:
+  type: user_identity
 
 inputs:
   config_file: 
