--- a/.github/workflows/main_wa-murata-dic-index.yml
+++ b/.github/workflows/main_wa-murata-dic-index.yml
@@ -37,6 +37,9 @@ jobs:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     steps:
+      - uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
       - uses: azure/docker-login@v1
         with:
           login-server: crmuratacopilot.azurecr.io
