--- a/.github/workflows/main_wa-murata-dic-index.yml
+++ b/.github/workflows/main_wa-murata-dic-index.yml
@@ -37,9 +37,9 @@ jobs:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     steps:
-      - uses: azure/login@v1
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
+      #- uses: azure/login@v1
+      #  with:
+      #    creds: ${{ secrets.AZURE_CREDENTIALS }}
       - uses: azure/docker-login@v1
         with:
           login-server: crmuratacopilot.azurecr.io
@@ -49,5 +49,5 @@ jobs:
         uses: azure/webapps-deploy@v2
         with:
           app-name: 'wa-murata-dic-index'
-          publish-profile: ${{ secrets.azureWebAppPublishProfile }}
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
           images: 'crmuratacopilot.azurecr.io/sample-app-aoai-chatgpt:latest'
