--- a/.github/workflows/main_wa-murata-dic-index.yml
+++ b/.github/workflows/main_wa-murata-dic-index.yml
@@ -51,3 +51,25 @@ jobs:
           app-name: 'wa-murata-dic-index'
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
           images: 'crmuratacopilot.azurecr.io/sample-app-aoai-chatgpt:latest'
+
+  deploy2:
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: 'Production'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+    steps:
+      #- uses: azure/login@v1
+      #  with:
+      #    creds: ${{ secrets.AZURE_CREDENTIALS }}
+      - uses: azure/docker-login@v1
+        with:
+          login-server: crmuratacopilot.azurecr.io
+          username: ${{ secrets.ACR_USERNAME }}
+          password: ${{ secrets.ACR_PASSWORD }}
+      - name: Download artifact from build job
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: 'wa-murata-dic-index'
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE2 }}
+          images: 'crmuratacopilot.azurecr.io/sample-app-aoai-chatgpt:latest'
