--- a/credentials.env
+++ b/credentials.env
@@ -14,9 +14,9 @@ AZURE_SEARCH_VECTOR_COLUMNS=
 AZURE_SEARCH_QUERY_TYPE=simple
 AZURE_SEARCH_PERMITTED_GROUPS_COLUMN=
 AZURE_SEARCH_STRICTNESS=3
-AZURE_OPENAI_RESOURCE=
-AZURE_OPENAI_MODEL=
-AZURE_OPENAI_KEY=
+AZURE_OPENAI_RESOURCE=wstest-aoai
+AZURE_OPENAI_MODEL=wstest-aoai
+AZURE_OPENAI_KEY=wstest-aoai
 AZURE_OPENAI_MODEL_NAME=gpt-35-turbo-16k
 AZURE_OPENAI_TEMPERATURE=0
 AZURE_OPENAI_TOP_P=1.0
@@ -25,9 +25,9 @@ AZURE_OPENAI_STOP_SEQUENCE=
 AZURE_OPENAI_SYSTEM_MESSAGE=You are an AI assistant that helps people find information.
 AZURE_OPENAI_PREVIEW_API_VERSION=2023-06-01-preview
 AZURE_OPENAI_STREAM=True
-AZURE_OPENAI_ENDPOINT=
+AZURE_OPENAI_ENDPOINT=https://wstest-aoai.openai.azure.com/
 AZURE_OPENAI_EMBEDDING_ENDPOINT=
-AZURE_OPENAI_EMBEDDING_KEY=
+AZURE_OPENAI_EMBEDDING_KEY=https://wstest-aoai.openai.azure.com/
 AZURE_COSMOSDB_ACCOUNT=
 AZURE_COSMOSDB_DATABASE=
 AZURE_COSMOSDB_CONVERSATIONS_CONTAINER=
