--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,5 @@ azure-search-documents==11.4.0b6
 azure-storage-blob==12.17.0
 python-dotenv==1.0.0
 azure-cosmos==4.5.0
+azure-monitor-opentelemetry==1.0.0
+opentelemetry.instrumentation.flask==0.41b0
