--- a/.github/workflows/main_dongwontest.yml
+++ b/.github/workflows/main_dongwontest.yml
@@ -30,6 +30,12 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
 
+      # add build code on here
+      - uses: actions/checkout@v3
+      - name: Build file in git repository
+        run:         
+          npm run build
+
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
