--- a/scripts/config.json
+++ b/scripts/config.json
@@ -9,6 +9,7 @@
         "chunk_size": 1024,
         "token_overlap": 128,
         "semantic_config_name": "default",
+        "hierarchical": "True",
         "language": "<Language to support for example use 'en' for English. Checked supported languages here under lucene - https://learn.microsoft.com/en-us/azure/search/index-add-language-analyzers"
     }
 ]
