--- a/.env
+++ b/.env
@@ -25,9 +25,9 @@ AZURE_OPENAI_STOP_SEQUENCE=
 AZURE_OPENAI_SYSTEM_MESSAGE=You are an AI assistant that helps people find information.
 AZURE_OPENAI_PREVIEW_API_VERSION=2023-06-01-preview
 AZURE_OPENAI_STREAM=True
-AZURE_OPENAI_ENDPOINT=https://wstest-aoai.openai.azure.com/
+AZURE_OPENAI_ENDPOINT=
 AZURE_OPENAI_EMBEDDING_ENDPOINT=
-AZURE_OPENAI_EMBEDDING_KEY=https://wstest-aoai.openai.azure.com/
+AZURE_OPENAI_EMBEDDING_KEY=
 AZURE_COSMOSDB_ACCOUNT=
 AZURE_COSMOSDB_DATABASE=
 AZURE_COSMOSDB_CONVERSATIONS_CONTAINER=
