--- a/.env
+++ b/.env
@@ -14,21 +14,21 @@ AZURE_SEARCH_VECTOR_COLUMNS=
 AZURE_SEARCH_QUERY_TYPE=simple
 AZURE_SEARCH_PERMITTED_GROUPS_COLUMN=
 AZURE_SEARCH_STRICTNESS=3
-AZURE_OPENAI_RESOURCE=aoai-hsj-test
-AZURE_OPENAI_MODEL=deploy-hsj-test
-AZURE_OPENAI_KEY=ca3607223cea4e5c8f5ef1828ce89026
-AZURE_OPENAI_MODEL_NAME=gpt-35-turbo
-AZURE_OPENAI_TEMPERATURE=0
+AZURE_OPENAI_RESOURCE=dwdp-aoai-001
+AZURE_OPENAI_MODEL=gpt-35-turbo-16k
+AZURE_OPENAI_MODEL_NAME=gpt-35-turbo-16k
+AZURE_OPENAI_KEY=45060c6e29d34d2f9ec804f5a35a403b
+AZURE_OPENAI_TEMPERATURE=0.7
 AZURE_OPENAI_TOP_P=1.0
-AZURE_OPENAI_MAX_TOKENS=1000
+AZURE_OPENAI_MAX_TOKENS=800
 AZURE_OPENAI_STOP_SEQUENCE=
 AZURE_OPENAI_SYSTEM_MESSAGE=You are an AI assistant that helps people find information.
 AZURE_OPENAI_PREVIEW_API_VERSION=2023-06-01-preview
 AZURE_OPENAI_STREAM=True
 AZURE_OPENAI_ENDPOINT=
 AZURE_OPENAI_EMBEDDING_ENDPOINT=
-AZURE_OPENAI_EMBEDDING_KEY=
+AZURE_OPENAI_EMBEDDING_KEY=45060c6e29d34d2f9ec804f5a35a403b
 AZURE_COSMOSDB_ACCOUNT=
-AZURE_COSMOSDB_DATABASE=
-AZURE_COSMOSDB_CONVERSATIONS_CONTAINER=
-AZURE_COSMOSDB_ACCOUNT_KEY=
+AZURE_COSMOSDB_DATABASE=db_conversation_history
+AZURE_COSMOSDB_CONVERSATIONS_CONTAINER=conversations
+AZURE_COSMOSDB_ACCOUNT=db-dwdp-azapp-test-chatbot-001
