--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "watch": "tsc && vite build --watch"
+    "watch": "tsc && vite build --watch",
+    "start": "react-scripts start"
   },
   "dependencies": {
     "@fluentui/react": "^8.105.3",
@@ -29,6 +30,7 @@
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
     "prettier": "^2.8.3",
+    "react-scripts": "^5.0.1",
     "typescript": "^4.9.3",
     "vite": "^4.1.5"
   }
