--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,5 +33,17 @@
     "react-scripts": "^5.0.1",
     "typescript": "^4.9.3",
     "vite": "^4.1.5"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
