--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start": "react-scripts start",
     "dev": "vite",
     "build": "tsc && vite build",
     "watch": "tsc && vite build --watch"
@@ -29,6 +30,7 @@
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
     "prettier": "^2.8.3",
+    "react-scripts": "^5.0.1",
     "typescript": "^4.9.3",
     "vite": "^4.1.5"
   }
