add application insights and cookie consent

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,11 @@
     "@fluentui/react": "^8.105.3",
     "@fluentui/react-hooks": "^8.6.29",
     "@fluentui/react-icons": "^2.0.195",
+    "@microsoft/applicationinsights-web": "^3.0.5",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "react": "^18.2.0",
+    "react-cookie-consent": "^9.0.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^7.0.1",
     "react-router-dom": "^6.8.1",
