Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/changes_winchellai.yml
+++ b/.github/workflows/changes_winchellai.yml
@@ -49,9 +49,7 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    permissions:
-      id-token: write #This is required for requesting the JWT
-
+    
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v3
@@ -62,17 +60,10 @@ jobs:
         run: unzip release.zip
 
       
-      - name: Login to Azure
-        uses: azure/login@v1
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_168FDD22F16F4C0CBA318F049BD8775A }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_8878E5496438443A88965F728AD26C14 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_07130C54511E461D91D125F28C89ABAD }}
-
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v2
         id: deploy-to-webapp
         with:
           app-name: 'WinchellAI'
           slot-name: 'Production'
-          
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_D60003B8222141EBA194371FE15CD243 }}
