feat: huvepharma customisation and feedback

--- a/.env.sample
+++ b/.env.sample
@@ -31,3 +31,4 @@ AZURE_COSMOSDB_ACCOUNT=
 AZURE_COSMOSDB_DATABASE=
 AZURE_COSMOSDB_CONVERSATIONS_CONTAINER=
 AZURE_COSMOSDB_ACCOUNT_KEY=
+VITE_OUT_OF_SCOPE_MESSAGE="I'm sorry, I am unable to answer your question based on the information I have been given. Please try a different question?"
