--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fluentui/react": "^8.105.3",
+    "@fluentui/react-components": "^9.43.2",
     "@fluentui/react-hooks": "^8.6.29",
     "@fluentui/react-icons": "^2.0.195",
     "lodash": "^4.17.21",
