- Add variable to sample

--- a/.env.sample
+++ b/.env.sample
@@ -38,4 +38,5 @@ AZURE_COSMOSDB_MONGO_VCORE_INDEX=
 AZURE_COSMOSDB_MONGO_VCORE_CONTENT_COLUMNS=
 AZURE_COSMOSDB_MONGO_VCORE_VECTOR_COLUMNS=
 AZURE_COSMOSDB_ENABLE_FEEDBACK=False
+AZURE_APPINSIGHTS_INSTRUMENTATIONKEY=
 AUTH_ENABLED=False
