Add Azure Speech parameters and endpoint for issueToken

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,6 @@
 # Chat
 DEBUG=True
+AUTH_ENABLED=False
 AZURE_OPENAI_RESOURCE=
 AZURE_OPENAI_MODEL=
 AZURE_OPENAI_KEY=
@@ -94,3 +95,8 @@ AZURE_MLINDEX_TITLE_COLUMN=
 AZURE_MLINDEX_URL_COLUMN= 
 AZURE_MLINDEX_VECTOR_COLUMNS=
 AZURE_MLINDEX_QUERY_TYPE=
+AZURE_COSMOSDB_ENABLE_FEEDBACK=False
+# Speech
+AZURE_SPEECH_ENABLED=False
+AZURE_SPEECH_KEY=
+AZURE_SPEECH_REGION=
