--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,8 +2,11 @@ name: Docker Image CI
 
 on:
   workflow_dispatch:
-    branches: 
-    - sawidder/workflow
+    inputs:
+      branch:
+        description: 'The branch to build'
+        required: true
+
 
   push:
     branches:
@@ -27,6 +30,8 @@ jobs:
         login-server: ${{ secrets.ACR_LOGIN_SERVER }}
         
     - uses: actions/checkout@v3
+      with:
+        ref: ${{ github.event.inputs.branch }}
     - name: Build the Docker image
       run:         
         docker build . --file WebApp.Dockerfile --tag fruoccopublic.azurecr.io/sample-app-aoai-chatgpt:$(date +'%Y-%m-%d')_$GITHUB_RUN_NUMBER;
