Add extra branding environment variables

--- a/.env.sample
+++ b/.env.sample
@@ -15,6 +15,12 @@ AZURE_OPENAI_ENDPOINT=
 AZURE_OPENAI_EMBEDDING_NAME=
 AZURE_OPENAI_EMBEDDING_ENDPOINT=
 AZURE_OPENAI_EMBEDDING_KEY=
+# Chat Branding
+BRANDING_TITLE=
+BRANDING_LOGO=
+BRANDING_CHAT_LOGO=
+BRANDING_CHAT_TITLE=
+BRANDING_CHAT_DESCRIPTION=
 # Chat history
 AZURE_COSMOSDB_ACCOUNT=
 AZURE_COSMOSDB_DATABASE=db_conversation_history
