Update frontend to use UI

--- a/.env.sample
+++ b/.env.sample
@@ -15,7 +15,7 @@ AZURE_OPENAI_ENDPOINT=
 AZURE_OPENAI_EMBEDDING_NAME=
 AZURE_OPENAI_EMBEDDING_ENDPOINT=
 AZURE_OPENAI_EMBEDDING_KEY=
-# Chat Branding
+# User Interface
 UI_TITLE=
 UI_LOGO=
 UI_CHAT_LOGO=
