Add UI_FAVICON to .env.sample

--- a/.env.sample
+++ b/.env.sample
@@ -21,6 +21,7 @@ UI_LOGO=
 UI_CHAT_LOGO=
 UI_CHAT_TITLE=
 UI_CHAT_DESCRIPTION=
+UI_FAVICON=
 # Chat history
 AZURE_COSMOSDB_ACCOUNT=
 AZURE_COSMOSDB_DATABASE=db_conversation_history
