--- a/.env.sample
+++ b/.env.sample
@@ -16,10 +16,10 @@ AZURE_OPENAI_EMBEDDING_NAME=
 AZURE_OPENAI_EMBEDDING_ENDPOINT=
 AZURE_OPENAI_EMBEDDING_KEY=
 # User Interface
-UI_TITLE=
+UI_TITLE=株式会社E.G.T
 UI_LOGO=
 UI_CHAT_LOGO=
-UI_CHAT_TITLE=
+UI_CHAT_TITLE=チャットを始めましょう!
 UI_CHAT_DESCRIPTION=
 UI_FAVICON=
 # Chat history
