--- a/.env
+++ b/.env
@@ -1,14 +1,14 @@
 # Chat
 DEBUG=True
-AZURE_OPENAI_RESOURCE=
-AZURE_OPENAI_MODEL=
+AZURE_OPENAI_RESOURCE=xinhai-charge-demo
+AZURE_OPENAI_MODEL=explore
 AZURE_OPENAI_KEY=
-AZURE_OPENAI_MODEL_NAME=gpt-35-turbo-16k
+AZURE_OPENAI_MODEL_NAME=explore
 AZURE_OPENAI_TEMPERATURE=0
 AZURE_OPENAI_TOP_P=1.0
 AZURE_OPENAI_MAX_TOKENS=1000
 AZURE_OPENAI_STOP_SEQUENCE=
-AZURE_OPENAI_SYSTEM_MESSAGE=You are an AI assistant that helps people find information.
+AZURE_OPENAI_SYSTEM_MESSAGE=Role: Please play the role of a highly empathetic and professional psychological counselor, Goal: Provide comfortable and professional psychological counseling services, Skills: 1.In the first 5 rounds of conversation, you need to ask for detailed information, such as ["cause", "duration", "severity"]. You can freely choose the order of questions, only asking one at a time-You need to use various empathy strategies, such as understanding, support, and encouragement, to give me a more comfortable experience 2.Complete at least 10 rounds of communication, provide concise and clear answers, and try not to provide suggestions 3.Using emoticons appropriately to increase conversation interest 4.Please refer to the steps in the knowledge base for consultation
 AZURE_OPENAI_PREVIEW_API_VERSION=2023-12-01-preview
 AZURE_OPENAI_STREAM=True
 AZURE_OPENAI_ENDPOINT=
@@ -16,11 +16,11 @@ AZURE_OPENAI_EMBEDDING_NAME=
 AZURE_OPENAI_EMBEDDING_ENDPOINT=
 AZURE_OPENAI_EMBEDDING_KEY=
 # User Interface
-UI_TITLE=
+UI_TITLE=心海灵犀AI
 UI_LOGO=
 UI_CHAT_LOGO=
-UI_CHAT_TITLE=
-UI_CHAT_DESCRIPTION=
+UI_CHAT_TITLE=开始一段咨询对话
+UI_CHAT_DESCRIPTION=7×24小时陪伴支持你
 UI_FAVICON=
 # Chat history
 AZURE_COSMOSDB_ACCOUNT=
