Audio in for prompts is working
Audio input working

--- a/.env.sample
+++ b/.env.sample
@@ -40,3 +40,7 @@ AZURE_COSMOSDB_MONGO_VCORE_VECTOR_COLUMNS=
 AZURE_COSMOSDB_ENABLE_FEEDBACK=False
 AZURE_APPINSIGHTS_INSTRUMENTATIONKEY=
 AUTH_ENABLED=False
+# Speech
+AZURE_SPEECH_ENABLED=False
+AZURE_SPEECH_KEY=
+AZURE_SPEECH_REGION=
