--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,8 @@ frontend/node_modules
 .azure/
 __pycache__/
 .ipynb_checkpoints/
+*.vsidx
+*.wsuo
+/.vs/sample-app-aoai-chatGPT/v17/DocumentLayout.json
+/.vs/slnx.sqlite
+/.vs/VSWorkspaceState.json
