--- a/.env.sample
+++ b/.env.sample
@@ -16,8 +16,8 @@ AZURE_OPENAI_EMBEDDING_NAME=
 AZURE_OPENAI_EMBEDDING_ENDPOINT=
 AZURE_OPENAI_EMBEDDING_KEY=
 # User Interface
-UI_TITLE=
-UI_LOGO=
+UI_TITLE=Black & Veatch
+UI_LOGO=https://blackandveatch.sharepoint.com/:i:/r/sites/BVConnect/SiteAssets/images/BVlogo.PNG?csf=1&web=1&e=GZSIEO
 UI_CHAT_LOGO=
 UI_CHAT_TITLE=
 UI_CHAT_DESCRIPTION=
