added links and change loading page

--- a/.env.sample
+++ b/.env.sample
@@ -17,7 +17,7 @@ AZURE_OPENAI_EMBEDDING_ENDPOINT=
 AZURE_OPENAI_EMBEDDING_KEY=
 # User Interface
 UI_TITLE=Black & Veatch
-UI_LOGO=https://blackandveatch.sharepoint.com/:i:/r/sites/BVConnect/SiteAssets/images/BVlogo.PNG?csf=1&web=1&e=GZSIEO
+UI_LOGO=/assests/BVlogo.PNG
 UI_CHAT_LOGO=
 UI_CHAT_TITLE=
 UI_CHAT_DESCRIPTION=
