--- a/.env.sample
+++ b/.env.sample
@@ -101,3 +101,9 @@ AZURE_MLINDEX_TITLE_COLUMN=
 AZURE_MLINDEX_URL_COLUMN= 
 AZURE_MLINDEX_VECTOR_COLUMNS=
 AZURE_MLINDEX_QUERY_TYPE=
+# Chat with data: Prompt flow API
+PROMPTFLOW_ENDPOINT=
+PROMPTFLOW_API_KEY=
+PROMPTFLOW_RESPONSE_TIMEOUT=120
+PROMPTFLOW_REQUEST_FIELD_NAME=question
+PROMPTFLOW_RESPONSE_FIELD_NAME=answer
