update with feedback from review

--- a/.env.sample
+++ b/.env.sample
@@ -102,6 +102,7 @@ AZURE_MLINDEX_URL_COLUMN=
 AZURE_MLINDEX_VECTOR_COLUMNS=
 AZURE_MLINDEX_QUERY_TYPE=
 # Chat with data: Prompt flow API
+USE_PROMPTFLOW=False
 PROMPTFLOW_ENDPOINT=
 PROMPTFLOW_API_KEY=
 PROMPTFLOW_RESPONSE_TIMEOUT=120
