--- a/azure.yaml
+++ b/azure.yaml
@@ -20,26 +20,26 @@ services:
           run:  cd ./frontend;npm install;npm run build
           interactive: true
           continueOnError: false
-hooks:
-    preprovision:
-      windows:
-        shell: pwsh
-        run: ./scripts/auth_init.ps1
-        interactive: true
-        continueOnError: false
-      posix:
-        shell: sh
-        run: ./scripts/auth_init.sh
-        interactive: true
-        continueOnError: false
-    postprovision:
-      windows:
-        shell: pwsh
-        run: ./scripts/auth_update.ps1;./scripts/prepdocs.ps1;
-        interactive: true
-        continueOnError: false
-      posix:
-        shell: sh
-        run: ./scripts/auth_update.sh;./scripts/prepdocs.sh;
-        interactive: true
-        continueOnError: false
+# hooks:
+#     preprovision:
+#       windows:
+#         shell: pwsh
+#         run: ./scripts/auth_init.ps1
+#         interactive: true
+#         continueOnError: false
+#       posix:
+#         shell: sh
+#         run: ./scripts/auth_init.sh
+#         interactive: true
+#         continueOnError: false
+#     postprovision:
+#       windows:
+#         shell: pwsh
+#         run: ./scripts/auth_update.ps1;
+#         interactive: true
+#         continueOnError: false
+#       posix:
+#         shell: sh
+#         run: ./scripts/auth_update.sh;
+#         interactive: true
+#         continueOnError: false
