--- a/azure.yaml
+++ b/azure.yaml
@@ -1,8 +1,8 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/Azure/azure-dev/main/schemas/v1.0/azure.yaml.json
 
-name: sample-app-aoai-chatgpt
+name: mainstreet-gpt
 metadata:
-  template: sample-app-aoai-chatgpt@0.0.1-beta
+  template: mainstreet-gpt@0.0.1-beta
 services:
   backend:
     project: .
@@ -20,26 +20,3 @@ services:
           run:  cd ./frontend;npm install;npm run build
           interactive: true
           continueOnError: false
-# hooks:
-#     preprovision:
-#       windows:
-#         shell: pwsh
-#         run: ./scripts/auth_init.ps1
-#         interactive: true
-#         continueOnError: false
-#       posix:
-#         shell: sh
-#         run: ./scripts/auth_init.sh
-#         interactive: true
-#         continueOnError: false
-#     postprovision:
-#       windows:
-#         shell: pwsh
-#         run: ./scripts/auth_update.ps1;
-#         interactive: true
-#         continueOnError: false
-#       posix:
-#         shell: sh
-#         run: ./scripts/auth_update.sh;
-#         interactive: true
-#         continueOnError: false
