--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -12,9 +12,10 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
+    defaults:
+      run:
+        working-directory: frontend
     strategy:
       matrix:
         node-version: [14.x, 16.x, 18.x, 21.x]
@@ -27,8 +28,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+        cache-dependency-path: '**/package-lock.json'
     - run: npm ci
-      working-directory: frontend
     - run: npm run build --if-present
-      working-directory: frontend
     # - run: npm test
