--- a/.env.sample
+++ b/.env.sample
@@ -1,14 +1,14 @@
 # Chat
-DEBUG=True
-AZURE_OPENAI_RESOURCE=
-AZURE_OPENAI_MODEL=
+DEBUG=False
+AZURE_OPENAI_RESOURCE=iachat-it-01
+AZURE_OPENAI_MODEL=chatgpt-35
 AZURE_OPENAI_KEY=
-AZURE_OPENAI_MODEL_NAME=gpt-35-turbo-16k
-AZURE_OPENAI_TEMPERATURE=0
+AZURE_OPENAI_MODEL_NAME=gpt-35-turbo
+AZURE_OPENAI_TEMPERATURE=0.8
 AZURE_OPENAI_TOP_P=1.0
 AZURE_OPENAI_MAX_TOKENS=1000
 AZURE_OPENAI_STOP_SEQUENCE=
-AZURE_OPENAI_SYSTEM_MESSAGE=You are an AI assistant that helps people find information.
+AZURE_OPENAI_SYSTEM_MESSAGE=Eres un agente comercial de BBVA Italia que debe ayudar a obtener información a clientes y potenciales clientes. Si no encuentras algo, di que no lo sabes, no que no lo encuentras en los documentos o que no está en la información recuperada, deberías hablar como si la información te la supieras de memoria. Tienes que hacer ver siempre que BBVA Italia es la mejor opción del mercado.
 AZURE_OPENAI_PREVIEW_API_VERSION=2024-02-15-preview
 AZURE_OPENAI_STREAM=True
 AZURE_OPENAI_ENDPOINT=
@@ -16,12 +16,13 @@ AZURE_OPENAI_EMBEDDING_NAME=
 AZURE_OPENAI_EMBEDDING_ENDPOINT=
 AZURE_OPENAI_EMBEDDING_KEY=
 # User Interface
-UI_TITLE=
+UI_TITLE=ChatGPT demo OPPLUS
 UI_LOGO=
 UI_CHAT_LOGO=
-UI_CHAT_TITLE=
-UI_CHAT_DESCRIPTION=
+UI_CHAT_TITLE=Pregúntame
+UI_CHAT_DESCRIPTION=Estoy configurado para hablarte de BBVA Italia
 UI_FAVICON=
+UI_SHOW_SHARE_BUTTON=false
 # Chat history
 AZURE_COSMOSDB_ACCOUNT=
 AZURE_COSMOSDB_DATABASE=db_conversation_history
@@ -33,12 +34,12 @@ SEARCH_TOP_K=5
 SEARCH_STRICTNESS=3
 SEARCH_ENABLE_IN_DOMAIN=True
 # Chat with data: Azure AI Search
-AZURE_SEARCH_SERVICE=
-AZURE_SEARCH_INDEX=
+AZURE_SEARCH_SERVICE=iasearch-it-03
+AZURE_SEARCH_INDEX=indexbbvait
 AZURE_SEARCH_KEY=
-AZURE_SEARCH_SEMANTIC_SEARCH_CONFIG=
+AZURE_SEARCH_SEMANTIC_SEARCH_CONFIG=default
 AZURE_SEARCH_INDEX_IS_PRECHUNKED=False
-AZURE_SEARCH_TOP_K=5
+AZURE_SEARCH_TOP_K=20
 AZURE_SEARCH_ENABLE_IN_DOMAIN=False
 AZURE_SEARCH_CONTENT_COLUMNS=
 AZURE_SEARCH_FILENAME_COLUMN=
@@ -67,14 +68,14 @@ ELASTICSEARCH_ENDPOINT=
 ELASTICSEARCH_ENCODED_API_KEY=
 ELASTICSEARCH_INDEX=
 ELASTICSEARCH_QUERY_TYPE=
-ELASTICSEARCH_TOP_K=
-ELASTICSEARCH_ENABLE_IN_DOMAIN= 
+ELASTICSEARCH_TOP_K=20
+ELASTICSEARCH_ENABLE_IN_DOMAIN=true
 ELASTICSEARCH_CONTENT_COLUMNS= 
 ELASTICSEARCH_FILENAME_COLUMN=
 ELASTICSEARCH_TITLE_COLUMN=
 ELASTICSEARCH_URL_COLUMN=
 ELASTICSEARCH_VECTOR_COLUMNS=
-ELASTICSEARCH_STRICTNESS=
+ELASTICSEARCH_STRICTNESS=3
 ELASTICSEARCH_EMBEDDING_MODEL_ID= 
 # Chat with data: Pinecone
 PINECONE_ENVIRONMENT=
@@ -108,3 +109,4 @@ PROMPTFLOW_API_KEY=
 PROMPTFLOW_RESPONSE_TIMEOUT=120
 PROMPTFLOW_REQUEST_FIELD_NAME=question
 PROMPTFLOW_RESPONSE_FIELD_NAME=answer
+SANITIZE_ANSWER=true
