--- a/.env.sample
+++ b/.env.sample
@@ -108,3 +108,4 @@ PROMPTFLOW_API_KEY=
 PROMPTFLOW_RESPONSE_TIMEOUT=120
 PROMPTFLOW_REQUEST_FIELD_NAME=question
 PROMPTFLOW_RESPONSE_FIELD_NAME=answer
+PROMPTFLOW_CITATIONS_FIELD_NAME=documents
