Add setting for PRESCANNED_PROMPTS and UI on Chat Screen

--- a/.env.sample
+++ b/.env.sample
@@ -108,3 +108,8 @@ PROMPTFLOW_API_KEY=
 PROMPTFLOW_RESPONSE_TIMEOUT=120
 PROMPTFLOW_REQUEST_FIELD_NAME=question
 PROMPTFLOW_RESPONSE_FIELD_NAME=answer
+
+PRECANNED_PROMPTS=
+PRECANNED_PROMPT_NAME=
+PRECANNED_PROMPT_DESCRIPTION=
+CHAT_EMPTY_TEXT_HINT=
