--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,13 +24,14 @@
     "react-uuid": "^2.0.0",
     "rehype-raw": "^6.1.1",
     "remark-gfm": "^3.0.1",
-    "remark-supersub": "^1.0.0"
+    "remark-supersub": "^1.0.0",
+    "swiper": "^8.3.2"
   },
   "devDependencies": {
     "@types/dompurify": "^3.0.5",
     "@types/jest": "^29.5.12",
     "@types/lodash-es": "^4.17.12",
-    "@types/mocha": "^10.0.6",
+    "@types/mocha": "^10.0.6",   
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/react-syntax-highlighter": "^15.5.11",
