Fix PYTHONPATH issues during tests

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -30,4 +30,5 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Test with pytest
       run: |
-        pytest
+        export PYTHONPATH=$(cwd)
+        pytest -v --show-capture=stdout
