--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -30,5 +30,5 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Test with pytest
       run: |
-        export PYTHONPATH=$(cwd)
+        export PYTHONPATH=$(pwd)
         pytest -v --show-capture=stdout
