Add UI_ prefix in env variable and update the prompt submission to prompt text

--- a/.env.sample
+++ b/.env.sample
@@ -109,7 +109,7 @@ PROMPTFLOW_RESPONSE_TIMEOUT=120
 PROMPTFLOW_REQUEST_FIELD_NAME=question
 PROMPTFLOW_RESPONSE_FIELD_NAME=answer
 
-PRECANNED_PROMPTS=
-PRECANNED_PROMPT_NAME=
-PRECANNED_PROMPT_DESCRIPTION=
-CHAT_EMPTY_TEXT_HINT=
+UI_PRECANNED_PROMPTS=
+UI_PRECANNED_PROMPT_NAMES=
+UI_PRECANNED_PROMPT_DESCRIPTIONS=
+UI_CHAT_EMPTY_TEXT_HINT=
