--- a/.env.sample
+++ b/.env.sample
@@ -22,6 +22,11 @@ UI_CHAT_LOGO=
 UI_CHAT_TITLE=
 UI_CHAT_DESCRIPTION=
 UI_FAVICON=
+UI_CHAT_EMPTY_TEXT_HINT=
+# UI and Prompt Control
+UI_PRECANNED_PROMPTS=
+UI_PRECANNED_PROMPT_NAMES=
+UI_PRECANNED_PROMPT_DESCRIPTIONS=
 # Chat history
 AZURE_COSMOSDB_ACCOUNT=
 AZURE_COSMOSDB_DATABASE=db_conversation_history
@@ -108,8 +113,3 @@ PROMPTFLOW_API_KEY=
 PROMPTFLOW_RESPONSE_TIMEOUT=120
 PROMPTFLOW_REQUEST_FIELD_NAME=question
 PROMPTFLOW_RESPONSE_FIELD_NAME=answer
-
-UI_PRECANNED_PROMPTS=
-UI_PRECANNED_PROMPT_NAMES=
-UI_PRECANNED_PROMPT_DESCRIPTIONS=
-UI_CHAT_EMPTY_TEXT_HINT=
