--- a/frontend/.prettierrc.json
+++ b/frontend/.prettierrc.json
@@ -7,6 +7,7 @@
     "tabWidth": 2,
     "printWidth": 120,
     "bracketSpacing": true,
+    "bracketSameLine": true,
     "jsxSingleQuote": false,
     "quoteProps": "as-needed"
 }
