--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "@eslint/eslintrc": "^3.0.2",
     "@eslint/js": "^9.1.1",
     "@types/dompurify": "^3.0.5",
+    "@types/eslint-config-prettier": "^6.11.3",
     "@types/jest": "^29.5.12",
     "@types/lodash-es": "^4.17.12",
     "@types/mocha": "^10.0.6",
