--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,7 @@
     "prettier": "npx prettier src --check",
     "prettier:fix": "npx prettier src --write",
     "format": "npm run prettier:fix && npm run lint:fix",
-    "prettier-watch": "onchange 'src/**/*.ts' -- prettier --write {{changed}}"
+    "prepare": "husky install"
   },
   "dependencies": {
     "@fluentui/react": "^8.105.3",
@@ -58,7 +58,9 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^12.1.0",
     "globals": "^15.0.0",
+    "husky": "^8.0.0",
     "jest": "^29.7.0",
+    "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
     "react-test-renderer": "^18.2.0",
     "string.prototype.replaceall": "^1.0.10",
