--- a/frontend/package.json
+++ b/frontend/package.json
@@ -68,5 +68,11 @@
     "ts-node": "^10.9.2",
     "typescript": "^4.9.5",
     "vite": "^4.1.5"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run format",
+      "pre-push": "npm run test"
+    }
   }
 }
