--- a/scripts/config.json
+++ b/scripts/config.json
@@ -1,12 +1,12 @@
 [
     {
-        "data_path": "c:\\Users\\sophiechen\\OneDrive - Microsoft\\Documents\\oyd\\data\\gptassertdata\\index_data\\product-info\\product-info",
-        "location": "West US 2",
+        "data_path": "c:\\Users\\sophiechen\\OneDrive - Microsoft\\Documents\\oyd\\data\\gptassertdata\\index_data\\azure-docs\\azure-docs",
+        "location": "East US",
         "subscription_id": "10e1de13-9717-4242-acf5-3e241940d326",
         "resource_group": "wed-aiq",
-        "search_service_name": "wed-aiq-acs-wu2",
-        "index_name": "product_info_embed_cohere_search_512_index",
-        "chunk_size": 512,
+        "search_service_name": "wed-aiq-acs-eus",
+        "index_name": "azure_embed_003_small_1536_index",
+        "chunk_size": 1024,
         "token_overlap": 0,
         "semantic_config_name": "default",
         "vector_config_name": "default"
