Add support for file upload such as .PDF, .DOCX, .TXT and send it as prompt

--- a/.env.sample
+++ b/.env.sample
@@ -27,6 +27,8 @@ UI_CHAT_EMPTY_TEXT_HINT=
 UI_PRECANNED_PROMPTS=
 UI_PRECANNED_PROMPT_NAMES=
 UI_PRECANNED_PROMPT_DESCRIPTIONS=
+UI_CHAT_EMPTY_TEXT_HINT=
+UI_INPUT_FILE_SIZE_LIMIT=
 # Chat history
 AZURE_COSMOSDB_ACCOUNT=
 AZURE_COSMOSDB_DATABASE=db_conversation_history
