--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "watch": "tsc && vite build --watch",
-    "test": "jest",
+    "test": "vitest",
     "lint": "npx eslint src",
     "lint:fix": "npx eslint --fix",
     "prettier": "npx prettier src --check",
@@ -15,9 +15,9 @@
     "format": "npm run prettier:fix && npm run lint:fix"
   },
   "dependencies": {
-    "@fluentui/react": "^8.105.3",
-    "@fluentui/react-hooks": "^8.6.29",
-    "@fluentui/react-icons": "^2.0.195",
+    "@fluentui/react": "^8.118.2",
+    "@fluentui/react-hooks": "^8.8.1",
+    "@fluentui/react-icons": "^2.0.239",
     "dompurify": "^3.0.8",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
@@ -36,7 +36,6 @@
     "@eslint/js": "^9.1.1",
     "@types/dompurify": "^3.0.5",
     "@types/eslint-config-prettier": "^6.11.3",
-    "@types/jest": "^29.5.12",
     "@types/lodash-es": "^4.17.12",
     "@types/mocha": "^10.0.6",
     "@types/node": "^20.12.7",
@@ -45,7 +44,7 @@
     "@types/react-syntax-highlighter": "^15.5.11",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
-    "@vitejs/plugin-react": "^3.1.0",
+    "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard-with-typescript": "^43.0.1",
@@ -57,14 +56,13 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^12.1.0",
     "globals": "^15.0.0",
-    "jest": "^29.7.0",
     "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
     "react-test-renderer": "^18.2.0",
     "string.prototype.replaceall": "^1.0.10",
-    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^4.9.5",
-    "vite": "^4.1.5"
+    "vite": "^5.2.11",
+    "vitest": "^1.6.0"
   }
 }
