--- a/.env.sample
+++ b/.env.sample
@@ -29,6 +29,7 @@ UI_PRECANNED_PROMPT_NAMES=
 UI_PRECANNED_PROMPT_DESCRIPTIONS=
 UI_CHAT_EMPTY_TEXT_HINT=
 UI_INPUT_FILE_SIZE_LIMIT=
+IMAGE_TO_TEXT_ENABLED=False
 # Chat history
 AZURE_COSMOSDB_ACCOUNT=
 AZURE_COSMOSDB_DATABASE=db_conversation_history
