document upload wip

--- a/.env.sample
+++ b/.env.sample
@@ -109,3 +109,18 @@ PROMPTFLOW_RESPONSE_TIMEOUT=120
 PROMPTFLOW_REQUEST_FIELD_NAME=query
 PROMPTFLOW_RESPONSE_FIELD_NAME=reply
 PROMPTFLOW_CITATIONS_FIELD_NAME=documents
+
+# Document upload
+DOCUPLOAD_AZURE_BLOB_STORAGE_KEY=
+DOCUPLOAD_AZURE_BLOB_STORAGE_ACCOUNT_NAME=
+DOCUPLOAD_AZURE_SEARCH_INDEXER=
+DOCUPLOAD_AZURE_BLOB_CONTAINER=
+DOCUPLOAD_AZURE_BLOB_FOLDER=
+DOCUPLOAD_DELETE_BLOB_ON_CONVERSATION_DELETE=true
+DOCUPLOAD_DELETE_INDEX_DOCUMENT_ON_CONVERSATION_DELETE=true
+DOCUPLOAD_INDEX_DOCUMENT_KEY=chunk_id
+DOCUPLOAD_RESTRICT_BY_CONVERSATIONID=true
+DOCUPLOAD_RESTRICT_BY_USERID=false
+DOCUPLOAD_GLOBAL_TAG=conversation_id
+DOCUPLOAD_GLOBAL_TAG_VALUE=null
+DOCUPLOAD_MAX_SIZE_MB=5
