--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -12,8 +12,7 @@
   ],
   "plugins": ["@typescript-eslint", "import", "simple-import-sort", "prettier"],
   "env": {
-    "browser": true,
-    "jest": true
+    "browser": true
   },
   "rules": {
     // "prettier/prettier": "error",
