--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "watch": "tsc && vite build --watch",
-    "test": "jest",
+    "test": "vitest",
     "lint": "npx eslint src",
     "lint:fix": "npx eslint --fix",
     "prettier": "npx prettier src --check",
@@ -36,9 +36,10 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.0.2",
     "@eslint/js": "^9.1.1",
+    "@testing-library/jest-dom": "^6.4.5",
+    "@testing-library/react": "^15.0.7",
     "@types/dompurify": "^3.0.5",
     "@types/eslint-config-prettier": "^6.11.3",
-    "@types/jest": "^29.5.12",
     "@types/lodash-es": "^4.17.12",
     "@types/mocha": "^10.0.6",
     "@types/node": "^20.12.7",
@@ -60,14 +61,14 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^12.1.0",
     "globals": "^15.0.0",
-    "jest": "^29.7.0",
+    "jsdom": "^24.0.0",
     "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
     "react-test-renderer": "^18.2.0",
     "string.prototype.replaceall": "^1.0.10",
-    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^4.9.5",
-    "vite": "^4.1.5"
+    "vite": "^4.1.5",
+    "vitest": "^0.34.1"
   }
 }
