Revert "Adding SQL server integration for private preview (#845)"
This reverts commit 5e91823868d3d219469492cee95a710d3737ae03.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -24,9 +24,7 @@
       "type": "chrome",
       "request": "launch",
       "name": "Frontend: Launch Chrome debugger",
-      "url": "http://127.0.0.1:50505",
-      "webRoot": "${workspaceFolder}/frontend",
-      "smartStep": true
+      "url": "http://127.0.0.1:50505"
     }
   ]
 }
