--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -15,7 +15,8 @@ permissions:
 jobs:
   build:
 
-    runs-on: [ubuntu-latest, windows-latest]
+    runs-on:
+    - windows-latest
 
     steps:
     - uses: actions/checkout@v3
