--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -13,11 +13,9 @@ permissions:
   contents: read
 
 jobs:
-  build:
-
+  test_linux:
     runs-on:
-    - windows-latest
-
+    - ubuntu-latest
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python 3.11
@@ -27,8 +25,26 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest
         pip install -r requirements-dev.txt
     - name: Test with pytest
       run: |
-        PYTHONPATH=. pytest -v --show-capture=stdout -k "not integration"
+        export PYTHONPATH=$(pwd)
+        pytest -v --show-capture=stdout -k "not integration"
+
+  test_windows:
+    runs-on:
+    - windows-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set up Python 3.11
+      uses: actions/setup-python@v3
+      with:
+        python-version: "3.11"
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements-dev.txt
+    - name: Test with pytest
+      run: |
+        set "PYTHONPATH=%cd%"
+        pytest -v --show-capture=stdout -k "not integration"
