--- a/.env.sample
+++ b/.env.sample
@@ -24,10 +24,10 @@ AZURE_OPENAI_EMBEDDING_NAME=
 AZURE_OPENAI_EMBEDDING_ENDPOINT=
 AZURE_OPENAI_EMBEDDING_KEY=
 # User Interface
-UI_TITLE=
+UI_TITLE=Aibidia
 UI_LOGO=
 UI_CHAT_LOGO=
-UI_CHAT_TITLE=
+UI_CHAT_TITLE=Aibidia
 UI_CHAT_DESCRIPTION=
 UI_FAVICON=
 # Chat history
