Support for multiple file upload with progress, vtt file support

--- a/.env.sample
+++ b/.env.sample
@@ -30,6 +30,7 @@ UI_PRECANNED_PROMPT_DESCRIPTIONS=
 UI_CHAT_EMPTY_TEXT_HINT=
 UI_INPUT_FILE_SIZE_LIMIT=
 IMAGE_TO_TEXT_ENABLED=False
+MAX_NUM_FILES_INPUT_ALLOWED=4
 # Chat history
 AZURE_COSMOSDB_ACCOUNT=
 AZURE_COSMOSDB_DATABASE=db_conversation_history
